index.php created

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,6 +6,9 @@
     overflow-x: hidden;
     color: $textColor;
 }
+div{
+    overflow: hidden;
+}
 h2{
     margin-bottom: 20px;
     color: $primaryColor;
