--- a/scss/_configure.scss
+++ b/scss/_configure.scss
@@ -1,15 +1,21 @@
-$primaryColor: #70C1ff;
+$primaryColor: #6495ED;
 $secondaryColor:#fbfbfb;
 $textColor: #2d3436;
 
+@mixin mediaLg{
+    @media screen and (max-width: 1080px) {
+        
+    }
+}
+
 @mixin mediaMd{
-    @media screen and (max-width: 960px){
+    @media screen and (max-width: 940px){
         @content;
     }
 }
 
 @mixin mediaSm{
-    @media screen and (max-width: 576px)
+    @media screen and (max-width: 600px)
     {
         @content;
     }
