--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,38 +2,6 @@
 @import"base";
 @import"navigation";
 
-/*
-nav{
-    position: absolute;
-    width: 100%;
-    //background-color: rgba($color: $textColor, $alpha:0.8);
-    height: 70px;
-    padding: 10px 0;
-    z-index: 1;
-    //border-bottom: 1px solid $textColor;
-    ul{
-        display: flex;
-        align-items: baseline;
-        justify-content: center  ;
-
-        li{
-            
-            padding-top: 10px;
-            padding-bottom: 8px;
-            margin: 0px 20px;
-            color: $primaryColor;
-            font-weight: 500;
-        }
-        #nav-branding{
-            padding-top: 0px;
-            h2{
-                color: $primaryColor;
-                font-weight: 500;
-            }
-        }
-    }
-}
-*/
 #sildeshow{
     position: relative;
     width: 100%;
@@ -51,21 +19,24 @@ nav{
     }
     .sildeshowText{
         position: absolute;
-        top: 38vh;
+        top: 37vh;
         width: 100vw;
-        height: 300px;
+        height: auto;
         z-index: 2;
         .container{
             display: flex;
             flex-direction: column;
+            justify-content: center;    
             align-items: center;
-            width: 50vw;
-            margin: 0px 25vw 0px 25vw;
+            width: 70vw;
+            margin: 0px 15vw 0px 15vw;
             *{
+                text-align: center;
                 color: white;
-                width: 400px;
+                //width: 400px;
                 margin-bottom: 15px;
                 text-align: center;
+
             }
             button{
                 margin: 15px 0px;
@@ -94,7 +65,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 100px;
+    margin: 100px 0px;
     //border-top: 2px solid $primaryColor;
    
     &-des{
@@ -117,17 +88,14 @@ nav{
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
-        transform: rotate(-45deg);
-        margin: -50px;
+        border-radius: 50%;
+        border: 1px solid $primaryColor;
+        //margin: -50px;
     }
 
-    .rotator{
-        transform: rotate(45deg);
-        width: 200px;
-        height:200px;
-        overflow: hidden;
-        border: 2px solid $primaryColor;
-        margin: 0px 30px;
+    .container-img{
+        width: auto;
+        height: auto;
     }
 }
 
@@ -185,4 +153,44 @@ nav{
             }
         }
     }
+
 }
+
+@include mediaMd{
+    .v-seperator{
+        width: 60%;
+        background-color: $primaryColor;
+        height: 1px;
+        margin: 0px;
+        margin-top: 10px;
+    }
+
+    .about{
+        flex-direction: column-reverse;
+
+        #end-s{
+            margin: 0px;
+            margin-top: 50px;
+            
+        }
+
+           
+        &-des{
+            height: auto;
+            width: 60%;
+            //padding-right: 100px;
+            text-align: center;
+            margin: 40px 0px 75px 0px;
+
+        }
+
+    }
+    .wwd{
+        
+        &-group{
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+}
+
