--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -200,14 +200,25 @@ footer{
     }
 
     footer{
+        height: auto;
+        padding-top: 20px;
         .contact-group{
             margin-left: -25px;
             &-card{
-                h2{
-                    font-size: 18px;
-                }
-                p{
-                    font-size: 11px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 0 0 40px 0;
+                &-text{
+                    margin: 0;
+                    h2{
+                        text-align: center;
+                        font-size: 24px;
+                    }
+                    p{
+                        text-align: center;
+                        font-size: 16px;
+                    }
                 }
             }
         }
