--- a/scss/colorChoose.scss
+++ b/scss/colorChoose.scss
@@ -33,7 +33,7 @@
         &-colors{
             margin-top: 0px;
             display: block;
-            height: 300px;
+            height: 200px;
             border-bottom: 1px solid $primaryColor;
             overflow-y: auto;
 
@@ -74,7 +74,7 @@
             justify-content: center;
             align-content: center;
             align-items: center;
-            height: 200px;
+            height: 300px;
             button{
                 margin: 10px;
                 background: none;
@@ -213,11 +213,12 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
-                height: 100px;
+                height: auto;
 
                 button{
                     width: 250px;
-                    margin: 0 10px 10px 10px;
+                    height: 70px;
+                    margin:10px;
                 }
             }
         }
@@ -228,6 +229,10 @@
 @include mediaSm{
     #photoEditor-toolbox-upload{
         flex-direction: column;
-        height: 150px;
+        height: auto;
+        
+        button{
+            height: auto;
+        }
     }
 }
