organized scss. Completed footer design

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,196 +1,8 @@
-@import"configure";
-@import"base";
-@import"navigation";
-
-#sildeshow{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    border-bottom: 2px solid $primaryColor;
-    .slideshowImg{
-        position: relative;
-        width: 100%;
-        height: 100vh;
-        background-image: url("../img/img1.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-        filter: brightness(30%);
-    }
-    .sildeshowText{
-        position: absolute;
-        top: 37vh;
-        width: 100vw;
-        height: auto;
-        z-index: 2;
-        .container{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;    
-            align-items: center;
-            width: 70vw;
-            margin: 0px 15vw 0px 15vw;
-            *{
-                text-align: center;
-                color: white;
-                //width: 400px;
-                margin-bottom: 15px;
-                text-align: center;
-
-            }
-            button{
-                margin: 15px 0px;
-                width: 200px;
-                padding: 15px;
-                border: 2px solid $primaryColor;
-                background-color: rgba($color: #000000, $alpha: 0);
-                color:$primaryColor;
-                text-align:center;
-            }
-        }
-
-        //filter: blur(2px);
- 
-    }
-
-}
-.v-seperator{
-    width: 1px;
-    background-color: $primaryColor;
-    height: 350px;
-    margin-right: 10px;
-}
-
-.about{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 100px 0px;
-    //border-top: 2px solid $primaryColor;
-   
-    &-des{
-        height: 250px;
-        width: 400px;
-        //padding-right: 100px;
-        margin: 75px 100px 0px 0px;
-
-    }
-    #end-s{
-        margin-right: 50px;
-
-    }
-    &-img{
-        width: 300px;
-        height: 300px;
-
-        //background-color: rgba($color: $primaryColor, $alpha: 1.0);
-        background: url("../img/img4.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        border-radius: 50%;
-        border: 1px solid $primaryColor;
-        //margin: -50px;
-    }
-
-    .container-img{
-        width: auto;
-        height: auto;
-    }
-}
-
-.wwd{
-    margin: 100px 0;
-    width: 100%;
-    background-color: lightgray;
-    .headline{
-
-        display: flex;
-        justify-content: center;
-        h2{
-            text-align: center;
-            width: 100%;
-            height: 40px;
-            //margin-top: 20px;
-            padding-top: 5px;
-            background: white;
-            border-bottom: 2px solid $primaryColor;
-        }
-    }
-    &-group{
-        display: flex;
-        justify-content: center;
-        
-        &-card{
-            background-color: white;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 50px 50px;
-            height: 300px;
-            width: 300px;
-            border: 2px solid $primaryColor;
-
-            &-icon{
-                ion-icon{
-                    color: $primaryColor;
-                }
-                margin: 25px 0px 15px 0px;
-                font-size: 50px;
-                text-align: center;
-            }
-            &-des{
-                h2{
-                    text-align: center;
-                    font-weight: 600;
-                }
-                p{
-                    text-align: center;
-                    font-weight: 700;
-                    color: $textColor;
-                }
-                margin: 0 30px;
-            }
-        }
-    }
-
-}
-
-@include mediaMd{
-    .v-seperator{
-        width: 60%;
-        background-color: $primaryColor;
-        height: 1px;
-        margin: 0px;
-        margin-top: 10px;
-    }
-
-    .about{
-        flex-direction: column-reverse;
-
-        #end-s{
-            margin: 0px;
-            margin-top: 50px;
-            
-        }
-
-           
-        &-des{
-            height: auto;
-            width: 60%;
-            //padding-right: 100px;
-            text-align: center;
-            margin: 40px 0px 75px 0px;
-
-        }
-
-    }
-    .wwd{
-        
-        &-group{
-            flex-direction: column;
-            align-items: center;
-        }
-    }
-}
+@import"main/configure";
+@import"main/base";
+@import"main/navigation";
+@import"main/slideshow";
+@import"main/seperator";
+@import"main/about";
+@import"main/services";
 
