--- a/scss/main/_navigation.scss
+++ b/scss/main/_navigation.scss
@@ -1,3 +1,5 @@
+$footerTextColor :#999;
+
 nav{
     position: absolute;
     display: flex;
@@ -32,6 +34,10 @@ nav{
             margin: 0px 20px;
             color: $primaryColor;
             font-weight: 500;
+            
+            a{
+                color: $primaryColor;
+            }
         }
     }
 }
@@ -39,77 +45,162 @@ nav{
 footer{
     width: 100%;
     height: 400px;
-    background-color: $textColor;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 50px 20px 0 20px;
-    
+    background-color: #383838;
 
-    .contact-group{
+    h2{
+        color: white;
+        margin: 0;
+    }
+    p, a, ion-icon{
+        color: $footerTextColor;
+        margin: 0;
+    }
+
+    .grid-horizontal{
         display: flex;
-        flex-direction: column;
-        width: 220px;
-        
-        &-card{
-            margin: 0 0 20px 0;
-            display: flex;
-            &-text{
-                margin: 0 0 0 20px;
-                h2{
-                    font-weight: 400 ;
-                    font-size: 24px;
-                    margin-bottom: 5px;
+        justify-content: space-evenly;
+        padding: 32px;
+
+        &-item{
+            width: 300px;
+        }
+    }
+
+
+
+    .grid-vertical{
+        display: grid;
+        grid-template-rows: auto auto auto auto auto;
+        gap: 0px;
+
+        &-item{
+            padding: 8px 8px;
+        }
+    }
+
+    #footer-content{
+
+        &-description{
+
+            .icon-info{
+                display: flex;
+
+                ion-icon{
+                    display: inline-block;
+                    margin: 0;
+                    padding: 4px 8px 0 0 ;
                 }
-                p{
-                    color:$primaryColor;
-                }
+                    
             }
 
-            &-icon{
-                width: 60px;
-                height: 60px;
-                background-color: white;
-                border-radius: 50%;
+        }
+        &-links{
+            grid-template-rows: repeat(5, 0.18fr);
+        }
+
+        &-form{
+            #input-header{
+                padding: 0px 8px;
+                margin-bottom: 8px;
+            }
+            .input{
                 display: flex;
                 justify-content: center;
-                align-items: center;
-                margin-bottom: 20px ;
-                ion-icon{
-                    font-size: 32px;
-                    text-align: center;
-                    color: $primaryColor;
+                padding: 8px;
+                &-textarea{
+                    padding: 8px;
                 }
             }
-            
+            #input-button{
+                padding: 8px 24px;
+                font-weight: 700;
+                margin: 8px;
+                color: $footerTextColor;
+                text-decoration: none;
+                background-color: $textColor;
+                border: 2px solid #222;
+            }
         }
     }
+}
 
-    .v-seperator{
-        width: 1px;
-        height: 300px;
-        display: block;
-        margin: -20px 25px 0 25px;
-        background: $primaryColor;
-    }
-    #link-group{
-        width: 220px;
-        margin:  0 0 0 25px;
-        h2{
-            font-size: 24px;
-            font-weight: 400;
-        }
-        ul{
-        
-            li{
-                a{
-                    color: white;
-                    
-                }
+// footer{
+//     width: 100%;
+//     height: 400px;
+//     background-color: $textColor;
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-around;
+//     padding: 50px 20px 0 20px;
     
-                margin: 0 0 30px 0;
-            }
-        }
+
+//     .contact-group{
+//         display: flex;
+//         flex-direction: column;
+//         width: 220px;
+        
+//         &-card{
+//             margin: 0 0 20px 0;
+//             display: flex;
+//             &-text{
+//                 margin: 0 0 0 20px;
+//                 h2{
+//                     font-weight: 400 ;
+//                     font-size: 24px;
+//                     margin-bottom: 5px;
+//                 }
+//                 p{
+//                     color:$primaryColor;
+//                 }
+//             }
+
+//             &-icon{
+//                 width: 60px;
+//                 height: 60px;
+//                 background-color: white;
+//                 border-radius: 50%;
+//                 display: flex;
+//                 justify-content: center;
+//                 align-items: center;
+//                 margin-bottom: 20px ;
+//                 ion-icon{
+//                     font-size: 32px;
+//                     text-align: center;
+//                     color: $primaryColor;
+//                 }
+//             }
+            
+//         }
+//     }
+
+//     .v-seperator{
+//         width: 1px;
+//         height: 300px;
+//         display: block;
+//         margin: -20px 25px 0 25px;
+//         background: $primaryColor;
+//     }
+//     #link-group{
+//         width: 220px;
+//         margin:  0 0 0 25px;
+//         h2{
+//             font-size: 24px;
+//             font-weight: 400;
+//         }
+//         ul{
+        
+//             li{
+//                 a{
+//                     color: white;
+//                 }
+//                 margin: 0 0 30px 0;
+//             }
+//         }
+//     }
+// }
+@include mediaMd{
+    .grid-horizontal{
+        grid-template-rows: 1fr 1fr 1fr;
     }
 }
 
@@ -195,6 +286,10 @@ footer{
                 text-align: center;
                 color: white;
                 margin: 0px;
+
+                a{
+                    color: white;
+                }
             }
         }
     }
