changed footer description and background image

--- a/scss/colorChoose.scss
+++ b/scss/colorChoose.scss
@@ -1,6 +1,6 @@
-@import"configure";
-@import"base";
-@import"navigation";
+@import"main/configure";
+@import"main/base";
+@import"main/navigation";
 
 #canvas{
     position: relative;
