--- a/scss/main/_configure.scss
+++ b/scss/main/_configure.scss
@@ -1,5 +1,8 @@
-$primaryColor: #6495ED;
+//$primaryColor: #6495ED;
+$primaryColor: #555;
 $secondaryColor:#fbfbfb;
+$primaryTextColor: #555;
+$secondaryTextColor: #eee;
 $textColor: #2d3436;
 
 @mixin mediaLg{
