--- a/scss/main/_navigation.scss
+++ b/scss/main/_navigation.scss
@@ -2,46 +2,65 @@ $footerTextColor :#999;
 
 nav{
     position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
     width: 100%;
-    //background-color: rgba($color: $textColor, $alpha:0.8);
-    //height: auto;
-    height: 70px;
-    padding: 10px 0;
-    z-index: 1;
-    //border-bottom: 1px solid $textColor;
-    #mobileNavButton{
-        display: none;
-    }
-    #nav-branding{
-        padding-top: 0px;
-        margin-right: 20px;
-        color: $primaryColor;
-        font-weight: 500;
-        
-    }
-    ul{
+    z-index: 2;
+    background-color: rgba($color: #fff, $alpha: 0);
+    transition: background-color 300ms ease-in-out;
+    .container{
         display: flex;
+        justify-content: space-between;
         align-items: baseline;
-        justify-content: center  ;
+        padding: 16px 96px;
+        a{
+            color: $primaryTextColor;
+            font-weight: 700;
+        }
 
-        li{
-            
-            padding-top: 10px;
-            padding-bottom: 8px;
-            margin: 0px 20px;
-            color: $primaryColor;
-            font-weight: 500;
-            
+        a:hover{
+            color: $secondaryTextColor;
+        }
+    
+        #mobileNavButton{
+            display: none;
+        }
+        #nav-branding{
             a{
-                color: $primaryColor;
+                font-weight: 500;
+            }
+            margin: 0;
+        }
+        ul{
+            display: flex;
+            align-items: baseline;
+            justify-content: center  ;
+    
+            li{
+                
+                padding-top: 10px;
+                padding-bottom: 8px;
+                margin: 0px 20px;
+                font-weight: 500;
             }
         }
     }
 }
 
+.scrolledNav{
+    position: fixed;
+    background-color: white;
+    animation: slideInNav 300ms ease-in-out;
+    .container{
+        *{
+            font-weight: 700;
+        }
+    }
+}
+
+@keyframes slideInNav{
+    0%{ transform: translate(0, -80px)}
+    100%{transform: translate(0, 0px)}
+
+}
 
 footer{
     width: 100%;
@@ -75,26 +94,25 @@ footer{
             margin-bottom: 24px;
         }
     
-        form{
-            .input{
-                margin: 12px 0px;
-                &-textarea{
-                    padding: 8px;
-                }
-            }
-            #input-button{
-                display: flex;
-                justify-content: center;
-                padding: 8px 24px;
-                font-weight: 700;
-                color: $footerTextColor;
-                text-decoration: none;
-                background-color: $textColor;
-                border: 2px solid #222;
-                width: 100%;
-                
+        .input{
+            margin: 12px 0px;
+            &-textarea{
+                padding: 8px;
             }
         }
+        #input-button{
+            display: flex;
+            justify-content: center;
+            padding: 8px 24px;
+            font-weight: 700;
+            color: $footerTextColor;
+            text-decoration: none;
+            background-color: $textColor;
+            border: 2px solid #222;
+            width: 100%;
+            
+        }
+
     }
 }
 
@@ -115,7 +133,7 @@ footer{
         justify-content: center;
         position: relative;
         overflow: hidden;
-        background-color: $primaryColor;
+        background-color: $primaryTextColor;
         height: auto;
         padding: 0px;
 
