--- a/scss/main/_services.scss
+++ b/scss/main/_services.scss
@@ -2,7 +2,6 @@
 .wwd{
     margin: 100px 0;
     width: 100%;
-    background-color: lightgray;
     .headline{
 
         display: flex;
@@ -14,7 +13,6 @@
             //margin-top: 20px;
             padding-top: 5px;
             background: white;
-            border-bottom: 2px solid $primaryColor;
         }
     }
     &-group{
@@ -25,31 +23,20 @@
             background-color: white;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            margin: 50px 50px;
+            //align-items: center;
+            margin: 0px 10px;
+            padding: 8px 40px;
             height: 300px;
-            width: 300px;
-            border: 2px solid $primaryColor;
+            width: 250px;
+            border: 2px solid #eee;
 
             &-icon{
                 ion-icon{
-                    color: $primaryColor;
+                    color: $primaryTextColor;
                 }
                 margin: 25px 0px 15px 0px;
-                font-size: 50px;
-                text-align: center;
-            }
-            &-des{
-                h2{
-                    text-align: center;
-                    font-weight: 600;
-                }
-                p{
-                    text-align: center;
-                    font-weight: 700;
-                    color: $textColor;
-                }
-                margin: 0 30px;
+                font-size: 40px;
+                //text-align: center;
             }
         }
     }
