--- a/scss/main/_slideshow.scss
+++ b/scss/main/_slideshow.scss
@@ -12,24 +12,23 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
-        filter: brightness(30%);
+        //filter: brightness(30%);
     }
     .sildeshowText{
         position: absolute;
         top: 37vh;
-        width: 100vw;
+        width: 100%;
         height: auto;
-        z-index: 2;
+        z-index: 1;
         .container{
             display: flex;
             flex-direction: column;
             justify-content: center;    
-            align-items: center;
-            width: 70vw;
-            margin: 0px 15vw 0px 15vw;
+            align-items: flex-start;
+            padding: 0px 96px;
             *{
-                text-align: center;
-                color: white;
+                text-align: start;
+                color: $primaryTextColor;
                 //width: 400px;
                 margin-bottom: 15px;
                 text-align: center;
@@ -39,9 +38,10 @@
                 margin: 15px 0px;
                 width: 200px;
                 padding: 15px;
-                border: 2px solid $primaryColor;
-                background-color: rgba($color: #000000, $alpha: 0);
-                color:$primaryColor;
+                border: 2px solid $primaryTextColor;
+                background-color: rgba($color: #000000, $alpha: 0.2);
+                color: #fff;
+                font-size: 16px;
                 text-align:center;
             }
         }
