Changed desc on about, change bgcolor in editore

--- a/scss/colorChoose.scss
+++ b/scss/colorChoose.scss
@@ -11,7 +11,7 @@
     width: 100vw;
     //height: calc(100vh - 100px);
     padding: 100px 0px 100px 0px;
-    background-color: #222;
+    //background-color: rgb(146, 143, 143);
     display: block;
 
     #editor-container{
