--- a/scss/main/_base.scss
+++ b/scss/main/_base.scss
@@ -10,6 +10,20 @@
 div{
     overflow: hidden;
 }
+.headline{
+
+    display: flex;
+    justify-content: center;
+    h2{
+        text-align: center;
+        width: 100%;
+        height: 40px;
+        //margin-top: 20px;
+        padding-top: 5px;
+        background: white;
+    }
+}
+ 
 h2{
     margin-bottom: 20px;
     color: $primaryColor;
