--- a/scss/main/_about.scss
+++ b/scss/main/_about.scss
@@ -3,35 +3,32 @@
     display: flex;
     justify-content: space-between;
     
-    margin: 100px 96px;
-    //border-top: 2px solid $primaryColor;
+    margin: 0px $generalPadding;
    
     &-des{
         max-width: 600px;
-        //max-width: 600px;
-        //padding-right: 100px;
-        //margin: 75px 100px 0px 0px;
-        //padding: 75px 100px 0 0 ;
-        padding: 75px 0px 0 0 ;
+        padding: 0px 32px;
 
     }
     .container-img{
+        border: 2px solid #eee;
         width: 400px;
         height: 400px;
-
         .about-img{
-                width: inherit;
-                height: inherit;
-            //background-color: rgba($color: $primaryColor, $alpha: 1.0);
-            background: url("../img/img4.jpg");
-            background-size: cover;
-            background-repeat: no-repeat;
-            //border-radius: 50%;
-            /*
-            background-position: center;
-            border: 1px solid $primaryColor;
-            */
-            //margin: -50px;
+            height: inherit;
+            object-fit: scale-down;
+            object-position: center;
+        }
+    }
+}
+
+#homeEditorDesc{
+    .container-img{
+        width: 600px;
+        height: auto;
+        .about-img{
+            height: auto;
+            width: inherit;
         }
     }
 }
@@ -40,6 +37,10 @@
 
     .about{
         flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+
+        margin: 0 32px;
 
         #end-s{
             margin: 0px;
@@ -50,12 +51,31 @@
            
         &-des{
             height: auto;
-            width: 60%;
             //padding-right: 100px;
-            text-align: center;
+            text-align: justify;
             margin: 40px 0px 75px 0px;
+
+            h2{
+                text-align: center;
+            }
 
         }
 
+    }
+
+    #homeEditorDesc{
+
+        .colorChoose{
+            width: 100%;
+        }
+        .container-img{
+            width: auto;
+            height: 500px;
+            .about-img{
+                //width: auto;
+                height: inherit;
+                content: url("../img/homeEditorMobile.jpg");
+            }
+        }
     }
 }
