--- a/scss/main/_services.scss
+++ b/scss/main/_services.scss
@@ -38,6 +38,10 @@
         &-group{
             flex-direction: column;
             align-items: center;
+
+            &-card{
+                margin: 10px 0px;
+            }
         }
     }
 }
