--- a/scss/main/_navigation.scss
+++ b/scss/main/_navigation.scss
@@ -140,7 +140,7 @@ footer{
                 background-color: white;
                 transform: translate(200px, 0px);
                 //transition: transform 300ms ease-in-out;
-                @include compTransition(transform, 300ms, ease-in-out);
+                @include compTransitionTransfrom(300ms, ease-in-out);
 
             }
     
