Overflow:hiiden is commented

--- a/scss/main/_navigation.scss
+++ b/scss/main/_navigation.scss
@@ -151,7 +151,7 @@ footer{
                 display: block;
                 background-color: white;
                 position: absolute;
-                overflow: hidden;
+                //overflow: hidden;
                 right: 15px;
                 top: 12px;
                 width:50px;
