--- a/scss/main/_navigation.scss
+++ b/scss/main/_navigation.scss
@@ -100,11 +100,11 @@ footer{
             display: flex;
             justify-content: center;
             padding: 8px 24px;
-            font-weight: 700;
-            color: $footerTextColor;
+            font-weight: 500;
+            color: #ddd;
             text-decoration: none;
             background-color: $textColor;
-            border: 2px solid #222;
+            //border: 2px solid #222;
             width: 100%;
             
         }
