--- a/scss/main/_slideshow.scss
+++ b/scss/main/_slideshow.scss
@@ -12,7 +12,7 @@
 #sildeshow{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     border-bottom: 2px solid $primaryColor;
     .slideshowImg{
         position: relative;
